# airplay2-receiver-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: ARCHITECTURE.md  CURRENT_TASK.md  PROGRESS.md  PYTHON_REFERENCE.md
src/: lib.rs  main.rs
src/audio/: mod.rs
src/config/: device.rs  flags.rs  mod.rs
src/crypto/: mod.rs
src/network/: mod.rs
src/protocol/: mod.rs
src/streaming/: mod.rs
src/utils/: mod.rs
